--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -8,7 +8,8 @@
         WindowState="Maximized"
         WindowStyle="None"
         ResizeMode="NoResize"
-        Background="White">
+        Background="White"
+        Loaded="Window_Loaded">
 
     <Window.Resources>
         <converters:CategoryStyleSelector x:Key="CategoryStyleSelector" />
@@ -40,7 +41,8 @@
 
             <!-- 🔍 Search și categorii -->
             <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                <TextBox Style="{StaticResource SearchBoxStyle}"
+                <TextBox x:Name="SearchTextBox"
+                         Style="{StaticResource SearchBoxStyle}"
                          Width="460"
                          Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"
                          Tag="Căutare după nume produs, brand sau categorie..." />
