--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -142,6 +142,7 @@
         <Border Grid.Row="2"
                 Background="{StaticResource PharmacyGreen}"
                 Height="40"
+                CornerRadius="5"
                 Margin="0,10,0,0">
             <TextBlock FontSize="18"
                        Foreground="White"
