--- a/InfoPointUI/Controls/ProductTile.xaml
+++ b/InfoPointUI/Controls/ProductTile.xaml
@@ -1,106 +1,99 @@
 ﻿<UserControl x:Class="InfoPointUI.Controls.ProductTile"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             Width="230" Height="241"
+             Width="235" Height="235"
              Background="White"
              Cursor="Hand">
 
-    <Border CornerRadius="10"
-            BorderBrush="{StaticResource PharmacyGreen}"
-            BorderThickness="2"
-            Background="{StaticResource PharmacyGreenSoft}"
-            Margin="10"
-            Padding="12"
-            MouseLeftButtonUp="OnTileClicked"
+    <Border BorderBrush="{StaticResource PharmacyGreen}"
+            BorderThickness="1"
+            Background="White"
+            Margin="4"
+            Padding="4"
             Effect="{StaticResource TileShadow}">
 
-        <Grid>
-            <!-- 🏷️ Badge promo -->
-            <Border Background="{StaticResource DrMaxRed}"
-                    CornerRadius="6"
-                    Padding="6,2"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    Visibility="{Binding HasDiscount, Converter={StaticResource BoolToVisibilityConverter}}"
-                    Margin="-4,-4,0,0">
-                <TextBlock Text="{Binding DiscountLabel}"
-                           Foreground="White"
-                           FontWeight="Bold"
-                           FontSize="13"/>
-            </Border>
-
-            <!-- 📦 Conținut produs -->
-            <StackPanel>
+        <StackPanel VerticalAlignment="Top" MaxHeight="221">
+            <Grid HorizontalAlignment="Center" Margin="0,0,0,6">
                 <Image Source="{Binding ProductImage}"
-                       Width="100" Height="100"
-                       RenderOptions.BitmapScalingMode="HighQuality"
+                       Width="150" Height="130"
                        Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="HighQuality"
                        SnapsToDevicePixels="True"
                        UseLayoutRounding="True"
-                       HorizontalAlignment="Center"
-                       ImageFailed="OnImageFailed"
-                       Margin="0,5,0,4"/>
+                       ImageFailed="OnImageFailed"/>
 
-                <TextBlock Text="{Binding Name}"
+                <Border Background="{StaticResource DrMaxRed}"
+                        Padding="4,2"
+                        CornerRadius="6"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        Visibility="{Binding HasDiscount, Converter={StaticResource BoolToVisibilityConverter}}"
+                        Margin="-20,10,0,0"
+                        Panel.ZIndex="1">
+                    <TextBlock Text="{Binding DiscountLabel}"
+                               Foreground="White"
+                               FontWeight="Bold"
+                               FontSize="18"
+                               FontFamily="Bahnschrift"/>
+                </Border>
+            </Grid>
+
+            <TextBlock Text="{Binding Name}"
+                       FontSize="15"
+                       FontWeight="Bold"
+                       FontFamily="Bahnschrift"
+                       TextAlignment="Center"
+                       TextWrapping="Wrap"
+                       TextTrimming="CharacterEllipsis"
+                       Height="36"
+                       LineStackingStrategy="BlockLineHeight"
+                       LineHeight="18"
+                       Margin="0,0,0,2"/>
+
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        Margin="0,0,0,2">
+                <TextBlock Text="Preț: "
                            FontSize="16"
-                           FontWeight="Bold"
                            FontFamily="Bahnschrift"
-                           TextAlignment="Center"
-                           TextWrapping="Wrap"
-                           TextTrimming="CharacterEllipsis"
-                           Height="40"
-                           LineStackingStrategy="BlockLineHeight"
-                           LineHeight="20"
-                           Margin="0,2,0,2"/>
+                           FontWeight="SemiBold"
+                           Foreground="{StaticResource PharmacyGreen}"
+                           Margin="0,0,4,0" />
 
-                <StackPanel Orientation="Horizontal"
-                            HorizontalAlignment="Center"
-                            Margin="0,2,0,0">
-                    <TextBlock Text="Preț: "
-                               FontSize="15"
-                               FontFamily="Bahnschrift"
-                               FontWeight="SemiBold"
-                               Foreground="{StaticResource PharmacyGreen}"
-                               Margin="0,0,4,0" />
+                <TextBlock Text="{Binding Price, Converter={StaticResource CurrencyConverter}}"
+                           FontSize="16"
+                           FontFamily="Bahnschrift"
+                           FontWeight="SemiBold"
+                           Foreground="{StaticResource PharmacyGreen}"
+                           Margin="0,0,4,0" />
 
-                    <TextBlock Text="{Binding Price, Converter={StaticResource CurrencyConverter}}"
-                               FontSize="15"
-                               FontFamily="Bahnschrift"
-                               FontWeight="SemiBold"
-                               Foreground="{StaticResource PharmacyGreen}"
-                               Margin="0,0,4,0" />
-
-                    <TextBlock Text="{Binding OriginalPrice, Converter={StaticResource CurrencyConverter}}"
-                               FontSize="13"
-                               FontFamily="Bahnschrift"
-                               Foreground="#888"
-                               TextDecorations="Strikethrough"
-                               Visibility="{Binding HasDiscount, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Margin="0,-1,0,0"
-                            Opacity="0.9">
-                    <Image Source="pack://application:,,,/InfoPointUI;component/Assets/Images/gps_pin.png"
-                           Width="24"
-                           Height="24"
-                           Margin="0,0,6,0"
-                           RenderOptions.BitmapScalingMode="HighQuality"/>
-
-                    <TextBlock Text="{Binding Location}"
-                               FontFamily="Bahnschrift"
-                               FontWeight="SemiBold"
-                               FontSize="15"
-                               Foreground="{StaticResource DrMaxText}"
-                               Margin="0,4,0,0"
-                               TextAlignment="Center"/>
-                </StackPanel>
+                <TextBlock Text="{Binding OriginalPrice, Converter={StaticResource CurrencyConverter}}"
+                           FontSize="14"
+                           FontFamily="Bahnschrift"
+                           Foreground="#888"
+                           TextDecorations="Strikethrough"
+                           Margin="0,1,0,0"
+                           Visibility="{Binding HasDiscount, Converter={StaticResource BoolToVisibilityConverter}}"/>
             </StackPanel>
-        </Grid>
+
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Margin="0,0,0,0"
+                        Opacity="0.9">
+                <Image Source="pack://application:,,,/InfoPointUI;component/Assets/Images/gps_pin.png"
+                       Width="20"
+                       Height="20"
+                       Margin="0,0,4,0"
+                       RenderOptions.BitmapScalingMode="HighQuality"/>
+
+                <TextBlock Text="{Binding Location}"
+                           FontFamily="Bahnschrift"
+                           FontWeight="SemiBold"
+                           FontSize="14"
+                           Foreground="{StaticResource DrMaxText}"
+                           TextAlignment="Center"/>
+            </StackPanel>
+        </StackPanel>
     </Border>
 </UserControl>
