--- a/InfoPointUI/App.xaml
+++ b/InfoPointUI/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="InfoPointUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:converters="clr-namespace:InfoPointUI.Converters">
+             xmlns:converters="clr-namespace:InfoPointUI.Converters"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
