--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -40,6 +40,7 @@
             <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png"
                    Height="64"
                    VerticalAlignment="Center"
+                   RenderOptions.BitmapScalingMode="HighQuality"
                    Margin="0,0,20,0" />
 
             <!-- 🔍 Search și categorii -->
