--- a/InfoPointUI/Views/Standby/StandbyWindow.xaml
+++ b/InfoPointUI/Views/Standby/StandbyWindow.xaml
@@ -2,24 +2,39 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStyle="None" ResizeMode="NoResize" WindowState="Maximized"
-        Background="{StaticResource PharmacyGreen}">
+        Background="{StaticResource PharmacyGreen}"
+        Loaded="Window_Loaded">
     <Grid>
+
+        <!-- TextBox invizibil care primește focus -->
+        <TextBox x:Name="HiddenInput"
+                 Background="{StaticResource PharmacyGreen}"
+                 Foreground="{StaticResource PharmacyGreen}"
+                 BorderThickness="0"
+                 Opacity="0.01"
+                 Focusable="True"
+                 KeyDown="HiddenInput_KeyDown"
+                 />
+
+        <!-- Conținutul vizual -->
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png" Height="100" />
+            <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png" 
+                   Height="100" 
+                   RenderOptions.BitmapScalingMode="HighQuality"/>
             <TextBlock Text="BUN VENIT! TE AȘTEPTĂM ÎN FARMACIILE NOASTRE" FontSize="28" Foreground="White" TextAlignment="Center" Margin="0,20,0,0" FontFamily="Bahnschrift">
                 <TextBlock.Effect>
                     <DropShadowEffect 
-                Color="Gray"     
-                BlurRadius="5"
-                ShadowDepth="3"
-                Direction="320"
-                Opacity="0.7"/>
+                        Color="Gray"     
+                        BlurRadius="5"
+                        ShadowDepth="3"
+                        Direction="320"
+                        Opacity="0.7"/>
                 </TextBlock.Effect>
             </TextBlock>
             <Canvas HorizontalAlignment="Center">
                 <TextBlock x:Name="MyText" Text="APROPIE-TE PENTRU A ÎNCEPE" 
-                       FontSize="24" HorizontalAlignment="Center" Foreground="White" TextAlignment="Center" 
-                       Margin="0,10,0,0" FontFamily="Bahnschrift">
+                           FontSize="24" HorizontalAlignment="Center" Foreground="White" TextAlignment="Center" 
+                           Margin="0,10,0,0" FontFamily="Bahnschrift">
                     <TextBlock.Effect>
                         <DropShadowEffect 
                             Color="Gray"     
@@ -29,25 +44,18 @@
                             Opacity="0.7"/>
                     </TextBlock.Effect>
                 </TextBlock>
-
             </Canvas>
 
             <Button x:Name="btnToggleSensor"
-             Content="Simuleaza Prox Senzor"
-             Click="btnToggleSensor_Click"
-             FontSize="16"
-           
-             HorizontalAlignment="Left"
-             VerticalAlignment="Top"
-             HorizontalContentAlignment="Center"
-             VerticalContentAlignment="Center"
-             Margin="0,150,0,0" 
-             Padding="5,5"
-             
-             />
-
+                    Content="Simuleaza Prox Senzor"
+                    Click="btnToggleSensor_Click"
+                    FontSize="16"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Margin="0,150,0,0" 
+                    Padding="5,5"/>
         </StackPanel>
-
-
     </Grid>
 </Window>
