Am marit calitatea de afisare a pozelor de pe ProductDetailsPage

--- a/InfoPointUI/Views/ProductDetails/ProductDetailsPage.xaml
+++ b/InfoPointUI/Views/ProductDetails/ProductDetailsPage.xaml
@@ -49,14 +49,21 @@
             <Button Tag="CloseWindow" Content="Home" Width="88" Height="38" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
         </StackPanel>
 
-        <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/drmax_logo.png" Height="40" HorizontalAlignment="Center"/>
+        <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/drmax_logo.png" 
+               RenderOptions.BitmapScalingMode="HighQuality"
+               Height="40" 
+               HorizontalAlignment="Center"/>
 
         <!-- Rândul 2 -->
         <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="DETALII PRODUS" FontSize="22" FontWeight="Bold"
                 Foreground="DarkGray" HorizontalAlignment="Center" Margin="0,10,0,10"/>
 
         <!-- Rândul 3 -->
-        <Image Grid.Row="2" Grid.Column="0" Source="{Binding Product.ProductImage}" Height="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Image Grid.Row="2" Grid.Column="0" Source="{Binding Product.ProductImage}" 
+               RenderOptions.BitmapScalingMode="HighQuality"
+               Height="150" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Top"/>
 
         <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Top" Margin="20,0,0,0">
             <TextBlock Text="{Binding Product.Name}" FontSize="20" FontWeight="Bold" Foreground="#333" TextWrapping="Wrap"/>
