--- a/InfoPointUI/Views/ProductDetails/ProductCallConsultant.xaml
+++ b/InfoPointUI/Views/ProductDetails/ProductCallConsultant.xaml
@@ -46,11 +46,15 @@
 
         <!-- Rândul 1 -->
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
-            <Button  Command="{Binding NavigateToDetailsCommand}" Content="Înapoi" Width="88" Height="38" Margin="0,0,12,0" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
-            <Button Tag="CloseWindow" Content="Home" Width="88" Height="38" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
+            <Button  Command="{Binding NavigateToDetailsCommand}" Content="Înapoi" Width="88" Height="42" Margin="0,0,12,0" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
+            <Button Tag="CloseWindow" Content="Home" Width="88" Height="42" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
         </StackPanel>
 
-        <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/drmax_logo.png" Height="40" HorizontalAlignment="Center"/>
+        <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/drmax_logo.png" Height="42"
+               RenderOptions.BitmapScalingMode="HighQuality"
+               HorizontalAlignment="Right"
+               VerticalAlignment="Center"
+               Margin="0,-10,30,0"/>
 
         <StackPanel Grid.Row="1"
             Grid.Column="0"
