--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -35,6 +35,10 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
             <!-- 🖼️ Logo -->
             <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png"
@@ -52,7 +56,7 @@
                          Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"
                          Tag="Căutare după nume produs, brand sau categorie..." />
 
-                <Button Content="Toate"
+                <Button Content="Toate categoriile"
                         Margin="20,0,10,0"
                         Command="{Binding SelectCategoryCommand}"
                         CommandParameter=""
@@ -72,9 +76,31 @@
                         Command="{Binding SelectCategoryCommand}"
                         CommandParameter="Proteze"
                         Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Proteze}" />
-            </StackPanel>
-        </Grid>
 
+            </StackPanel>
+            <Button Content="Scaneaza card" Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Style="{StaticResource CategoryButtonStyle}" 
+                        Click="OnScanCard"
+                    />
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" Margin="10, 5">
+                <TextBlock
+                           Text="Card de fidelitate: " 
+                           FontSize="16" 
+                           FontFamily="Bahnschrift"
+                           HorizontalAlignment="Left" 
+                           VerticalAlignment="Center"
+                           Visibility="{Binding Text, ElementName=txtCardNumber, Converter={StaticResource StringToVisibilityConverter}}"/>
+                <TextBlock x:Name="txtCardNumber" 
+                           Text="{Binding LoyaltyCardCode, UpdateSourceTrigger=PropertyChanged}" 
+                           DataContext="Application.Current"
+                           FontSize="20" FontFamily="Bahnschrift"
+                           HorizontalAlignment="Left" 
+                           VerticalAlignment="Center"/>
+            </StackPanel>
+
+        </Grid>
+        
         <!-- 🧃 Produse + navigare -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -123,6 +149,14 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+
+            <!--<Grid Grid.Column="1" Background="#F5F5F5">-->
+                <!--<controls:DrMaxCard Grid.Column="1" Grid.Row="0"  HorizontalAlignment="Right" VerticalAlignment="Top"
+                            CardText=""
+                            CenterTextSize="22"
+                                    Height="150" Width="310"
+                                    Margin="0,-100, 10, 0"
+                            BarcodeValue="SCANEAZA CARD       "/>-->
 
             <!-- ▶️ Navigare dreapta -->
             <Border Grid.Column="2" Background="#20FFFFFF" Cursor="Hand">
