--- a/InfoPointUI/Views/Standby/StandbyWindow.xaml
+++ b/InfoPointUI/Views/Standby/StandbyWindow.xaml
@@ -1,61 +1,69 @@
-﻿<Window x:Class="InfoPointUI.Views.Standby.StandbyWindow"
+﻿<Window x:Class="InfoPointUI.Views.StandbyWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStyle="None" ResizeMode="NoResize" WindowState="Maximized"
-        Background="{StaticResource PharmacyGreen}"
-        Loaded="Window_Loaded">
+        WindowStyle="None" WindowState="Maximized" 
+        Background="{StaticResource PharmacyGreen}" 
+        Topmost="True" ShowInTaskbar="False">
+
+    <Window.Resources>
+        <!-- Bounce Animation for Logo -->
+        <Storyboard x:Key="LogoBounceAnimation" RepeatBehavior="Forever" AutoReverse="True">
+            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                           From="1.0" To="1.1" Duration="0:0:1.5"/>
+            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY" 
+                           From="1.0" To="1.1" Duration="0:0:1.5"/>
+        </Storyboard>
+
+        <!-- Pulse Animation for Text -->
+        <Storyboard x:Key="TextPulseAnimation" RepeatBehavior="Forever" AutoReverse="True">
+            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                           From="0.7" To="1.0" Duration="0:0:2"/>
+        </Storyboard>
+    </Window.Resources>
+
     <Grid>
+        <!-- Main Content Container -->
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
-        <!-- TextBox invizibil care primește focus -->
-        <TextBox x:Name="HiddenInput"
-                 Background="{StaticResource PharmacyGreen}"
-                 Foreground="{StaticResource PharmacyGreen}"
-                 BorderThickness="0"
-                 Opacity="0.01"
-                 Focusable="True"
-                 KeyDown="HiddenInput_KeyDown"
-                 />
+            <!-- DrMax Logo with Bounce Animation -->
+            <Border x:Name="LogoBorder" 
+                    Width="280" 
+                    Height="280" 
+                    CornerRadius="140" 
+                    Background="White" 
+                    Margin="0,0,0,60"
+                    RenderTransformOrigin="0.5,0.5">
+                <Border.RenderTransform>
+                    <ScaleTransform/>
+                </Border.RenderTransform>
+                <Image Source="/InfoPointUI;component/Assets/Images/drmax_logo.png" 
+                       Stretch="Uniform" 
+                       Margin="40"/>
+            </Border>
 
-        <!-- Conținutul vizual -->
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png" 
-                   Height="100" 
-                   RenderOptions.BitmapScalingMode="HighQuality"/>
-            <TextBlock Text="BUN VENIT! TE AȘTEPTĂM ÎN FARMACIILE NOASTRE" FontSize="28" Foreground="White" TextAlignment="Center" Margin="0,20,0,0" FontFamily="Bahnschrift">
-                <TextBlock.Effect>
-                    <DropShadowEffect 
-                        Color="Gray"     
-                        BlurRadius="5"
-                        ShadowDepth="3"
-                        Direction="320"
-                        Opacity="0.7"/>
-                </TextBlock.Effect>
-            </TextBlock>
-            <Canvas HorizontalAlignment="Center">
-                <TextBlock x:Name="MyText" Text="APROPIE-TE SAU APASĂ PENTRU A ÎNCEPE" 
-                           FontSize="24" HorizontalAlignment="Center" Foreground="White" TextAlignment="Center" 
-                           Margin="0,10,0,0" FontFamily="Bahnschrift">
-                    <TextBlock.Effect>
-                        <DropShadowEffect 
-                            Color="Gray"     
-                            BlurRadius="5"
-                            ShadowDepth="3"
-                            Direction="320"
-                            Opacity="0.7"/>
-                    </TextBlock.Effect>
-                </TextBlock>
-            </Canvas>
+            <!-- Welcome Message -->
+            <TextBlock Text="Bine ați venit!" 
+                       Foreground="White" 
+                       FontSize="42" 
+                       FontWeight="SemiBold"
+                       FontFamily="Bahnschrift"
+                       HorizontalAlignment="Center" 
+                       Margin="0,0,0,25"
+                       TextAlignment="Center"/>
 
-            <Button x:Name="btnToggleSensor"
-                    Content="Simuleaza Prox Senzor"
-                    Click="btnToggleSensor_Click"
-                    FontSize="16"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    Margin="0,150,0,0" 
-                    Padding="5,5"/>
+            <!-- Instruction Text with Pulse Animation -->
+            <TextBlock x:Name="InstructionText"
+                       Text="Atingeți ecranul pentru a începe" 
+                       Foreground="White" 
+                       FontSize="24" 
+                       FontWeight="Light"
+                       FontFamily="Bahnschrift"
+                       HorizontalAlignment="Center" 
+                       Opacity="0.7"
+                       TextAlignment="Center"/>
         </StackPanel>
+
+        <!-- Full Screen Touch Area -->
+        <Border Background="Transparent" Cursor="Hand"/>
     </Grid>
 </Window>
